// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NumberInputField should render correctly 1`] = `
<DocumentFragment>
  .css-1civgmb {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-16otux {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-z2ov1d {
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 48px;
  border: 1px solid #d9dadd;
  border-radius: 4px;
}

.css-z2ov1d[data-error='true'] {
  border: 1px solid #b3144d;
}

.css-z2ov1d[aria-disabled='true'] {
  background: #f3f3f4;
  cursor: not-allowed;
}

.css-z2ov1d:not([aria-disabled='true']) .exvap483:hover,
.css-z2ov1d:not([aria-disabled='true']) .exvap483:focus {
  border: 1px solid #792dd4;
}

.css-z2ov1d:not([aria-disabled='true']) .exvap483:focus-within {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  border: 1px solid #792dd4;
}

.css-1gfigg3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #641cb3;
  color: #d8c5fc;
  margin: 0 8px;
  width: 32px;
  height: 32px;
}

.css-1gfigg3:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-1fy0w11-sizeStyles {
  vertical-align: middle;
  fill: #d8c5fc;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.css-1fy0w11-sizeStyles .fillStroke {
  stroke: #d8c5fc;
  fill: none;
}

.css-192mx7g {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border: 1px solid transparent;
  max-width: 100%;
}

.css-14kc19i {
  color: #3f4250;
  background-color: transparent;
  font-size: 16px;
  border: none;
  outline: none;
  position: relative;
  margin-right: 4px;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
  -moz-appearance: textfield;
}

.css-14kc19i::-webkit-outer-spin-button,
.css-14kc19i::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.css-14kc19i::-webkit-input-placeholder {
  color: #727683;
}

.css-14kc19i::-moz-placeholder {
  color: #727683;
}

.css-14kc19i:-ms-input-placeholder {
  color: #727683;
}

.css-14kc19i::placeholder {
  color: #727683;
}

.css-14kc19i[disabled] {
  color: #b5b7bd;
  cursor: not-allowed;
}

.css-rw624t {
  color: #3f4250;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  margin-right: 8px;
}

.css-5k8zny {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #641cb3;
  margin: 0 8px;
  width: 32px;
  height: 32px;
}

.css-5k8zny:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-5k8zny:active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.css-5k8zny:hover,
.css-5k8zny:active {
  background: #e5dbfd;
  color: #521094;
}

.css-svgia8-sizeStyles {
  vertical-align: middle;
  fill: #641cb3;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.css-svgia8-sizeStyles .fillStroke {
  stroke: #641cb3;
  fill: none;
}

<form>
    <div
      class="css-1civgmb ehpbis70"
    >
      <div
        class="css-16otux ehpbis70"
      >
        <div
          aria-disabled="false"
          class="css-z2ov1d exvap480"
          data-error="false"
        >
          <button
            aria-label="Minus"
            class="exvap484 css-1gfigg3 e112qvla0"
            disabled=""
            type="button"
          >
            <div>
              <svg
                class="css-1fy0w11-sizeStyles e1gt4cfo0"
                viewBox="0 0 20 20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M4 9.75A.75.75 0 0 1 4.75 9h10.5a.75.75 0 0 1 0 1.5H4.75A.75.75 0 0 1 4 9.75"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
          </button>
          <div
            aria-live="assertive"
            class="css-192mx7g exvap483"
            role="status"
          >
            <input
              aria-label="Number Input"
              class="css-14kc19i exvap482"
              id=":r0:"
              name="test"
              style="width: 16px;"
              type="number"
              value="0"
            />
            <span
              class="css-rw624t exvap481"
            />
          </div>
          <button
            aria-label="Plus"
            class="exvap484 css-5k8zny e112qvla0"
            type="button"
          >
            <div>
              <svg
                class="css-svgia8-sizeStyles e1gt4cfo0"
                viewBox="0 0 20 20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10.75 4.75a.75.75 0 0 0-1.5 0v4.5h-4.5a.75.75 0 0 0 0 1.5h4.5v4.5a.75.75 0 0 0 1.5 0v-4.5h4.5a.75.75 0 0 0 0-1.5h-4.5z"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`NumberInputField should render correctly disabled 1`] = `
<DocumentFragment>
  .css-1civgmb {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-16otux {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-z2ov1d {
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 48px;
  border: 1px solid #d9dadd;
  border-radius: 4px;
}

.css-z2ov1d[data-error='true'] {
  border: 1px solid #b3144d;
}

.css-z2ov1d[aria-disabled='true'] {
  background: #f3f3f4;
  cursor: not-allowed;
}

.css-z2ov1d:not([aria-disabled='true']) .exvap483:hover,
.css-z2ov1d:not([aria-disabled='true']) .exvap483:focus {
  border: 1px solid #792dd4;
}

.css-z2ov1d:not([aria-disabled='true']) .exvap483:focus-within {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  border: 1px solid #792dd4;
}

.css-1gfigg3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #641cb3;
  color: #d8c5fc;
  margin: 0 8px;
  width: 32px;
  height: 32px;
}

.css-1gfigg3:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-1fy0w11-sizeStyles {
  vertical-align: middle;
  fill: #d8c5fc;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.css-1fy0w11-sizeStyles .fillStroke {
  stroke: #d8c5fc;
  fill: none;
}

.css-192mx7g {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border: 1px solid transparent;
  max-width: 100%;
}

.css-14kc19i {
  color: #3f4250;
  background-color: transparent;
  font-size: 16px;
  border: none;
  outline: none;
  position: relative;
  margin-right: 4px;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
  -moz-appearance: textfield;
}

.css-14kc19i::-webkit-outer-spin-button,
.css-14kc19i::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.css-14kc19i::-webkit-input-placeholder {
  color: #727683;
}

.css-14kc19i::-moz-placeholder {
  color: #727683;
}

.css-14kc19i:-ms-input-placeholder {
  color: #727683;
}

.css-14kc19i::placeholder {
  color: #727683;
}

.css-14kc19i[disabled] {
  color: #b5b7bd;
  cursor: not-allowed;
}

.css-epkb7s {
  color: #b5b7bd;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  margin-right: 8px;
}

<form>
    <div
      class="css-1civgmb ehpbis70"
    >
      <div
        class="css-16otux ehpbis70"
      >
        <div
          aria-disabled="true"
          class="css-z2ov1d exvap480"
          data-error="false"
        >
          <button
            aria-label="Minus"
            class="exvap484 css-1gfigg3 e112qvla0"
            disabled=""
            type="button"
          >
            <div>
              <svg
                class="css-1fy0w11-sizeStyles e1gt4cfo0"
                viewBox="0 0 20 20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M4 9.75A.75.75 0 0 1 4.75 9h10.5a.75.75 0 0 1 0 1.5H4.75A.75.75 0 0 1 4 9.75"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
          </button>
          <div
            aria-live="assertive"
            class="css-192mx7g exvap483"
            role="status"
          >
            <input
              aria-label="Number Input"
              class="css-14kc19i exvap482"
              disabled=""
              id=":r5:"
              name="test"
              style="width: 32px;"
              type="number"
              value="10"
            />
            <span
              class="css-epkb7s exvap481"
            />
          </div>
          <button
            aria-label="Plus"
            class="exvap484 css-1gfigg3 e112qvla0"
            disabled=""
            type="button"
          >
            <div>
              <svg
                class="css-1fy0w11-sizeStyles e1gt4cfo0"
                viewBox="0 0 20 20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10.75 4.75a.75.75 0 0 0-1.5 0v4.5h-4.5a.75.75 0 0 0 0 1.5h4.5v4.5a.75.75 0 0 0 1.5 0v-4.5h4.5a.75.75 0 0 0 0-1.5h-4.5z"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`NumberInputField should trigger event onMinCrossed & onMaxCrossed 1`] = `
<DocumentFragment>
  .css-1civgmb {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-16otux {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-z2ov1d {
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 48px;
  border: 1px solid #d9dadd;
  border-radius: 4px;
}

.css-z2ov1d[data-error='true'] {
  border: 1px solid #b3144d;
}

.css-z2ov1d[aria-disabled='true'] {
  background: #f3f3f4;
  cursor: not-allowed;
}

.css-z2ov1d:not([aria-disabled='true']) .exvap483:hover,
.css-z2ov1d:not([aria-disabled='true']) .exvap483:focus {
  border: 1px solid #792dd4;
}

.css-z2ov1d:not([aria-disabled='true']) .exvap483:focus-within {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  border: 1px solid #792dd4;
}

.css-5k8zny {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #641cb3;
  margin: 0 8px;
  width: 32px;
  height: 32px;
}

.css-5k8zny:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-5k8zny:active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.css-5k8zny:hover,
.css-5k8zny:active {
  background: #e5dbfd;
  color: #521094;
}

.css-svgia8-sizeStyles {
  vertical-align: middle;
  fill: #641cb3;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.css-svgia8-sizeStyles .fillStroke {
  stroke: #641cb3;
  fill: none;
}

.css-192mx7g {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border: 1px solid transparent;
  max-width: 100%;
}

.css-14kc19i {
  color: #3f4250;
  background-color: transparent;
  font-size: 16px;
  border: none;
  outline: none;
  position: relative;
  margin-right: 4px;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
  -moz-appearance: textfield;
}

.css-14kc19i::-webkit-outer-spin-button,
.css-14kc19i::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.css-14kc19i::-webkit-input-placeholder {
  color: #727683;
}

.css-14kc19i::-moz-placeholder {
  color: #727683;
}

.css-14kc19i:-ms-input-placeholder {
  color: #727683;
}

.css-14kc19i::placeholder {
  color: #727683;
}

.css-14kc19i[disabled] {
  color: #b5b7bd;
  cursor: not-allowed;
}

.css-rw624t {
  color: #3f4250;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  margin-right: 8px;
}

.css-1gfigg3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #641cb3;
  color: #d8c5fc;
  margin: 0 8px;
  width: 32px;
  height: 32px;
}

.css-1gfigg3:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-1fy0w11-sizeStyles {
  vertical-align: middle;
  fill: #d8c5fc;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.css-1fy0w11-sizeStyles .fillStroke {
  stroke: #d8c5fc;
  fill: none;
}

<form>
    <div
      class="css-1civgmb ehpbis70"
    >
      <div
        class="css-16otux ehpbis70"
      >
        <div
          aria-disabled="false"
          class="css-z2ov1d exvap480"
          data-error="false"
        >
          <button
            aria-label="Minus"
            class="exvap484 css-5k8zny e112qvla0"
            type="button"
          >
            <div>
              <svg
                class="css-svgia8-sizeStyles e1gt4cfo0"
                viewBox="0 0 20 20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M4 9.75A.75.75 0 0 1 4.75 9h10.5a.75.75 0 0 1 0 1.5H4.75A.75.75 0 0 1 4 9.75"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
          </button>
          <div
            aria-live="assertive"
            class="css-192mx7g exvap483"
            role="status"
          >
            <input
              aria-label="Number Input"
              class="css-14kc19i exvap482"
              id=":rf:"
              name="test"
              style="width: 32px;"
              type="number"
              value="20"
            />
            <span
              class="css-rw624t exvap481"
            />
          </div>
          <button
            aria-label="Plus"
            class="exvap484 css-1gfigg3 e112qvla0"
            disabled=""
            type="button"
          >
            <div>
              <svg
                class="css-1fy0w11-sizeStyles e1gt4cfo0"
                viewBox="0 0 20 20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10.75 4.75a.75.75 0 0 0-1.5 0v4.5h-4.5a.75.75 0 0 0 0 1.5h4.5v4.5a.75.75 0 0 0 1.5 0v-4.5h4.5a.75.75 0 0 0 0-1.5h-4.5z"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`NumberInputField should trigger events correctly 1`] = `
<DocumentFragment>
  .css-1civgmb {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-16otux {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-z2ov1d {
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 48px;
  border: 1px solid #d9dadd;
  border-radius: 4px;
}

.css-z2ov1d[data-error='true'] {
  border: 1px solid #b3144d;
}

.css-z2ov1d[aria-disabled='true'] {
  background: #f3f3f4;
  cursor: not-allowed;
}

.css-z2ov1d:not([aria-disabled='true']) .exvap483:hover,
.css-z2ov1d:not([aria-disabled='true']) .exvap483:focus {
  border: 1px solid #792dd4;
}

.css-z2ov1d:not([aria-disabled='true']) .exvap483:focus-within {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  border: 1px solid #792dd4;
}

.css-5k8zny {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #641cb3;
  margin: 0 8px;
  width: 32px;
  height: 32px;
}

.css-5k8zny:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-5k8zny:active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.css-5k8zny:hover,
.css-5k8zny:active {
  background: #e5dbfd;
  color: #521094;
}

.css-svgia8-sizeStyles {
  vertical-align: middle;
  fill: #641cb3;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.css-svgia8-sizeStyles .fillStroke {
  stroke: #641cb3;
  fill: none;
}

.css-192mx7g {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border: 1px solid transparent;
  max-width: 100%;
}

.css-14kc19i {
  color: #3f4250;
  background-color: transparent;
  font-size: 16px;
  border: none;
  outline: none;
  position: relative;
  margin-right: 4px;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
  -moz-appearance: textfield;
}

.css-14kc19i::-webkit-outer-spin-button,
.css-14kc19i::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.css-14kc19i::-webkit-input-placeholder {
  color: #727683;
}

.css-14kc19i::-moz-placeholder {
  color: #727683;
}

.css-14kc19i:-ms-input-placeholder {
  color: #727683;
}

.css-14kc19i::placeholder {
  color: #727683;
}

.css-14kc19i[disabled] {
  color: #b5b7bd;
  cursor: not-allowed;
}

.css-rw624t {
  color: #3f4250;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  margin-right: 8px;
}

<form>
    <div
      class="css-1civgmb ehpbis70"
    >
      <div
        class="css-16otux ehpbis70"
      >
        <div
          aria-disabled="false"
          class="css-z2ov1d exvap480"
          data-error="false"
        >
          <button
            aria-label="Minus"
            class="exvap484 css-5k8zny e112qvla0"
            type="button"
          >
            <div>
              <svg
                class="css-svgia8-sizeStyles e1gt4cfo0"
                viewBox="0 0 20 20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M4 9.75A.75.75 0 0 1 4.75 9h10.5a.75.75 0 0 1 0 1.5H4.75A.75.75 0 0 1 4 9.75"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
          </button>
          <div
            aria-live="assertive"
            class="css-192mx7g exvap483"
            role="status"
          >
            <input
              aria-label="Number Input"
              class="css-14kc19i exvap482"
              id=":ra:"
              name="test"
              style="width: 32px;"
              type="number"
              value="10"
            />
            <span
              class="css-rw624t exvap481"
            />
          </div>
          <button
            aria-label="Plus"
            class="exvap484 css-5k8zny e112qvla0"
            type="button"
          >
            <div>
              <svg
                class="css-svgia8-sizeStyles e1gt4cfo0"
                viewBox="0 0 20 20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10.75 4.75a.75.75 0 0 0-1.5 0v4.5h-4.5a.75.75 0 0 0 0 1.5h4.5v4.5a.75.75 0 0 0 1.5 0v-4.5h4.5a.75.75 0 0 0 0-1.5h-4.5z"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;
